<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/initialFragment">

    <fragment
        android:id="@+id/initialFragment"
        android:name="com.qubacy.moveanddraw.ui.application.activity.screen.initial.InitialFragment"
        android:label="InitialFragment" >
        <action
            android:id="@+id/action_initialFragment_to_viewerFragment"
            app:destination="@id/viewerFragment" />
        <action
            android:id="@+id/action_initialFragment_to_editorFragment"
            app:destination="@id/editorFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewerFragment"
        android:name="com.qubacy.moveanddraw.ui.application.activity.screen.viewer.ViewerFragment"
        android:label="ViewerFragment" />
    <fragment
        android:id="@+id/editorFragment"
        android:name="com.qubacy.moveanddraw.ui.application.activity.screen.editor.EditorFragment"
        android:label="EditorFragment" />
</navigation>