<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/drawing_bottom_bar_pick_color"
        android:icon="@drawable/ic_color_preview"
        android:title="Pick Color"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurfaceVariant"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/drawing_bottom_bar_drawing_mode"
        android:icon="@drawable/ic_square"
        android:title="Drawing mode"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurfaceVariant"
        android:orderInCategory="2"/>

</menu>