<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/drawing_top_bar_main_group">
        <item
            android:id="@+id/drawing_top_bar_share"
            android:icon="@drawable/ic_share"
            android:title="Share"
            android:contentDescription="Share the drawing"
            app:showAsAction="ifRoom"
            app:iconTint="?attr/colorOnSurfaceVariant" />

        <item
            android:id="@+id/drawing_top_bar_load"
            android:icon="@drawable/ic_load_local"
            android:title="Load"
            android:contentDescription="Load a local drawing"
            app:showAsAction="ifRoom"
            app:iconTint="?attr/colorOnSurfaceVariant"/>
    </group>
</menu>